--- a/styles/style.css
+++ b/styles/style.css
@@ -1,8 +1,1 @@
-* {
-  font-size: larger;
-  text-align: center;
-}
-
-p {
-  color: antiquewhite;
-}/*# sourceMappingURL=style.css.map */
+/*# sourceMappingURL=style.css.map */
